add: add the main image of the card

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 <body>
   <main class="flex">
     <article class="card">
+      <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" />
       Equilibrium #3429
 
       Our Equilibrium collection promotes balance and calm.
