add: add a class to the main image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <main class="flex">
     <article class="card">
-      <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" />
+      <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" class="card-header" />
       Equilibrium #3429
 
       Our Equilibrium collection promotes balance and calm.
