--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
   <main class="flex">
     <article class="card">
       <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" class="card-header" />
-      Equilibrium #3429
+      <div class="card-body">
+        Equilibrium #3429
 
-      Our Equilibrium collection promotes balance and calm.
+        Our Equilibrium collection promotes balance and calm.
 
-      0.041 ETH
-      3 days left
+        0.041 ETH
+        3 days left
 
-      Creation of Jules Wyvern
+        <img src="./images/image-avatar.png" alt="avatar" class="card-body-img" />
+        Creation of Jules Wyvern
+      </div>
     </article>
   </main>
   <footer>
