add: add accessibility tags to sort the information

--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
     <article class="card">
       <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" class="card-header" />
       <div class="card-body">
-        Equilibrium #3429
+        <h1>Equilibrium #3429</h1>
 
-        Our Equilibrium collection promotes balance and calm.
-
-        0.041 ETH
-        3 days left
+        <span>Our Equilibrium collection promotes balance and calm.</span>
+        <span>0.041 ETH</span>
+        <span>3 days left</span>
 
         <img src="./images/image-avatar.png" alt="avatar" class="card-body-img" />
-        Creation of Jules Wyvern
+        <span>Creation of Jules Wyvern</span>
       </div>
     </article>
   </main>
