--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <article class="card">
       <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" class="card-header" />
       <div class="card-body">
-        <h1>Equilibrium #3429</h1>
+        <h1 class="card-body-title">Equilibrium #3429</h1>
 
         <span>Our Equilibrium collection promotes balance and calm.</span>
         <span>0.041 ETH</span>
