fix: change the span tag to the p tag and add a class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="card-body">
         <h1 class="card-body-title">Equilibrium #3429</h1>
 
-        <span>Our Equilibrium collection promotes balance and calm.</span>
+        <p class="card-body-text">Our Equilibrium collection promotes balance and calm.</p>
         <span>0.041 ETH</span>
         <span>3 days left</span>
 
