fix: fix the card body footer and move outside of the card body

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <span>0.041 ETH</span>
         <span>3 days left</span>
 
+      </div>
+      <div class="card-body-footer">
         <img src="./images/image-avatar.png" alt="avatar" class="card-body-img" />
         <span>Creation of Jules Wyvern</span>
       </div>
