fix: fix the class for the avatar on the card

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       </div>
       <div class="card-body-footer">
-        <img src="./images/image-avatar.png" alt="avatar" class="card-body-img" />
+        <img src="./images/image-avatar.png" alt="avatar" class="card-body-footer-img" />
         <span>Creation of Jules Wyvern</span>
       </div>
     </article>
