add: add the link to the normalize css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   <title>Frontend Mentor | NFT preview card component</title>
 
+  <link rel="stylesheet" href="./css/normalize.css">
+
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution {
@@ -36,8 +38,10 @@
 
       </div>
       <div class="card-body-footer">
-        <img src="./images/image-avatar.png" alt="avatar" class="card-body-footer-img" />
-        <span>Creation of Jules Wyvern</span>
+        <div class="card-body-footer-social">
+          <img src="./images/image-avatar.png" alt="avatar" class="card-body-footer-img" />
+          <span>Creation of Jules Wyvern</span>
+        </div>
       </div>
     </article>
   </main>
