add: add a div with it class

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <h1 class="card-body-title">Equilibrium #3429</h1>
 
         <p class="card-body-text">Our Equilibrium collection promotes balance and calm.</p>
-        <span>0.041 ETH</span>
-        <span>3 days left</span>
+        <div class="card-body-text-date">
+          <span>0.041 ETH</span>
+          <span>3 days left</span>
+        </div>
 
       </div>
       <div class="card-body-footer">
