add: icons and make sections to separate the data

--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
 
         <p class="card-body-text">Our Equilibrium collection promotes balance and calm.</p>
         <div class="card-body-text-date">
-          <span>0.041 ETH</span>
-          <span>3 days left</span>
+          <div>
+            <img alt="ethereum icon" src="./images/icon-ethereum.svg" class="card-body-text-date-iconEth" />
+            <span class="card-body-text-date-eth">0.041 ETH</span>
+          </div>
+          <div>
+            <img alt="clock icon" src="./images/icon-clock.svg" class="card-body-text-date-iconClock" />
+            <span class="card-body-text-date-sec">3 days left</span>
+          </div>
         </div>
-
       </div>
       <div class="card-body-footer">
         <div class="card-body-footer-social">
