del: delete the class from the avatar image

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="card-body-footer">
         <div class="card-body-footer-social">
-          <img src="./images/image-avatar.png" alt="avatar" class="card-body-footer-img" />
+          <img src="./images/image-avatar.png" alt="avatar" />
           <span>Creation of Jules Wyvern</span>
         </div>
       </div>
