add: add properties to the span that contain the Jules Wyvern name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="card-body-footer">
         <div class="card-body-footer-social">
           <img src="./images/image-avatar.png" alt="avatar" />
-          <span>Creation of Jules Wyvern</span>
+          <span>Creation of <span>Jules Wyvern</span></span>
         </div>
       </div>
     </article>
