add: add a container and the view image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
 <body>
   <main class="flex">
     <article class="card">
-      <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" class="card-header" />
+      <div class="card-container">
+        <img src="./images/image-equilibrium.jpg" alt="image that contain a shape with colors" />
+        <div class="card-container-overlay">
+          <img src="./images/icon-view.svg" alt="view">
+        </div>
+      </div>
       <div class="card-body">
         <h1 class="card-body-title">Equilibrium #3429</h1>
         <p class="card-body-text">Our Equilibrium collection promotes balance and calm.</p>
