add: add a meta tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <title>Frontend Mentor | NFT preview card component</title>
+  <meta name="Frontend Mentor - NFT preview card component"
+    content="This is a project about a card that display the new NFT component.">
 
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
